[package]
name = "mickey"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "Accessibility utility to move mouse cursor using keyboard with binary search algorithm"
homepage = "https://github.com/luizpro/mickey"
repository = "https://github.com/luizpro/mickey"
readme = "README.md"

keywords = ["x11", "mouse", "cursor", "binarysearch", "leftwm"]

categories = ["command-line-utilities", "accessibility"]

[dependencies]
libxdo-sys = "0.11.0"
clap = { version = "3.1.18", features = ["derive"]}
anyhow = "1.0.57"
serde = { version = "1.0.137", features = ["derive"] }
bincode = "1.3.3"
